update application name

--- a/platform/nonprod/nextjs-app/application.yaml
+++ b/platform/nonprod/nextjs-app/application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: nextjs-app
+  name: nextjs-app-dev
   namespace: argocd
 spec:
   project: default
