--- a/platform/nonprod/config.yaml
+++ b/platform/nonprod/config.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: app-config
+  name: app-config-dev
   namespace: argocd
 spec:
   project: default
