--- a/platform/nonprod/nestjs-api/application.yaml
+++ b/platform/nonprod/nestjs-api/application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: nestjs-api
+  name: nestjs-api-dev
   namespace: argocd
 spec:
   project: default
