--- a/platform/nonprod/nestjs-api/application.yaml
+++ b/platform/nonprod/nestjs-api/application.yaml
@@ -4,7 +4,7 @@ metadata:
   name: nestjs-api-dev
   namespace: argocd
 spec:
-  project: default
+  project: backend
   source:
     repoURL: git@github.com:ZFlucKZ/nonprod-k8s-manifest-2.git
     targetRevision: main # branch
