--- a/platform/nonprod/nextjs-app/application.yaml
+++ b/platform/nonprod/nextjs-app/application.yaml
@@ -11,7 +11,7 @@ spec:
     path: dev/nextjs-app
   destination:
     server: https://kubernetes.default.svc
-    namespace: argocd
+    namespace: develop
   syncPolicy:
     automated:
       prune: true
