--- a/platform/system/manager-rbac.yaml
+++ b/platform/system/manager-rbac.yaml
@@ -12,6 +12,8 @@ spec:
     - git@github.com:ZFlucKZ/nonprod-k8s-manifest-2.git
     - git@github.com:ZFlucKZ/nonprod-k8s-config-2.git
   destinations:
+    - namespace: develop
+      server: https://kubernetes.default.svc
     - namespace: argocd
       server: https://kubernetes.default.svc
   clusterResourceWhitelist:
